summative.moria.Moria.scala.error
Erreur de compilation :
Moria:3: error: not found: value est
  {setDirection(est);avance()}
                ^Moria:4: error: not found: value ouest
if (estSurBiscuit){porteBiscuit();setDirection(ouest);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
                                               ^