summative.moria.Moria.scala.code
while (getCouleurSol()!=Color.green)
while (!estSurBiscuit() && !estFaceMur())
	{setDirection(est);avance()}
if (estSurBiscuit){porteBiscuit();setDirection(ouest);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
if(estFaceMur){droite();avance();gauche();avance()}